K8/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx  # This should match the label defined in Deployment
  ports:
    - protocol: TCP
      port: 80  # The port that the service will expose
      targetPort: 80  # The port that the container listens on
  type: ClusterIP  # Exposes the service within the cluster
