K8/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # hostname of nginx configured in AWS route 53
  - host: devops-assignment.dev
    http:
      paths:
      # context path for routing prometheus UI
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
          # service name of prometheus
            name: prometheus-service
            port:
              number: 80
